cardapio e ajustes finais

--- a/brilhante.html
+++ b/brilhante.html
@@ -56,6 +56,12 @@
 						</a>
 					</li>
 					<li>
+						<a href="cardapio.html">
+							<span class="icone cardapio"></span>
+							Cardápio
+						</a>
+					</li>
+					<li>
 						<a href="localizacao.html">
 							<span class="icone localizacao"></span>
 							Localização
@@ -100,16 +106,15 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Mesa de bilhar</strong></li>
-									<li><strong>Churrasqueira</strong></li>
-									<li><strong>Pole dance com jogo de luzes</strong></li>
-									<li><strong>Sauna</strong></li>
-									<li><strong>Hidro spa com cascata</strong></li>
-									<li>Smart TV 48"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
+									<li>&#10003; Mesa de bilhar</li>
+									<li>&#10003; Churrasqueira</li>
+									<li>&#10003; Pole dance com jogo de luzes</li>
+									<li>&#10003; Sauna</li>
+									<li>&#10003; Hidro spa com cascata</li>
+									<li>&#10003; Smart TV 48"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
 								</ul>
 							</div>
 						</section>
@@ -195,6 +200,9 @@
 					</li>
 					<li>
 						<a href="sobre.html">Sobre nós</a>
+					</li>
+					<li>
+						<a href="cardapio.html">Cardápio</a>
 					</li>
 					<li>
 						<a href="localizacao.html">Localização</a>
