--- a/diamante.html
+++ b/diamante.html
@@ -56,6 +56,12 @@
 						</a>
 					</li>
 					<li>
+						<a href="cardapio.html">
+							<span class="icone cardapio"></span>
+							Cardápio
+						</a>
+					</li>
+					<li>
 						<a href="localizacao.html">
 							<span class="icone localizacao"></span>
 							Localização
@@ -97,14 +103,13 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Espelho no teto</strong></li>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Espelho no teto</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -132,14 +137,13 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Espelho no teto</strong></li>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Espelho no teto</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -169,13 +173,12 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -204,13 +207,12 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -239,13 +241,12 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -273,13 +274,12 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -307,14 +307,13 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Espelho no teto</strong></li>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Espelho no teto</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -343,13 +342,12 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -377,7 +375,6 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<p><strong>Cama box</strong>, smart TV 40", frigobar, ar condicionado, som USB e secador de cabelo.</p>
 							</div>
 						</section>
@@ -405,14 +402,13 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Cama no formato de coração</strong></li>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Cama no formato de coração</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -441,14 +437,13 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Cama box</strong></li>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Cama box</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -476,14 +471,13 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Cama box</strong></li>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Cama box</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -512,14 +506,13 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Cama box</strong></li>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Cama box</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -547,14 +540,13 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Cama box</strong></li>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Cama box</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -640,6 +632,9 @@
 					</li>
 					<li>
 						<a href="sobre.html">Sobre nós</a>
+					</li>
+					<li>
+						<a href="cardapio.html">Cardápio</a>
 					</li>
 					<li>
 						<a href="localizacao.html">Localização</a>
