--- a/localizacao.html
+++ b/localizacao.html
@@ -56,6 +56,12 @@
 						</a>
 					</li>
 					<li>
+						<a href="cardapio.html">
+							<span class="icone cardapio"></span>
+							Cardápio
+						</a>
+					</li>
+					<li>
 						<a href="localizacao.html" class="ativo">
 							<span class="icone localizacao ativo"></span>
 							Localização
@@ -137,6 +143,9 @@
 					</li>
 					<li>
 						<a href="sobre.html">Sobre nós</a>
+					</li>
+					<li>
+						<a href="cardapio.html">Cardápio</a>
 					</li>
 					<li>
 						<a href="localizacao.html" class="ativo">Localização</a>
