--- a/esmeralda.html
+++ b/esmeralda.html
@@ -56,6 +56,12 @@
 						</a>
 					</li>
 					<li>
+						<a href="cardapio.html">
+							<span class="icone cardapio"></span>
+							Cardápio
+						</a>
+					</li>
+					<li>
 						<a href="localizacao.html">
 							<span class="icone localizacao"></span>
 							Localização
@@ -99,14 +105,13 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li>Smart TV 40"</li>
-									<li>Hidro</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Hidro</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -134,14 +139,13 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li>Smart TV 40"</li>
-									<li>Hidro</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Hidro</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -227,6 +231,9 @@
 					</li>
 					<li>
 						<a href="sobre.html">Sobre nós</a>
+					</li>
+					<li>
+						<a href="cardapio.html">Cardápio</a>
 					</li>
 					<li>
 						<a href="localizacao.html">Localização</a>
