--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					</li>
 					<li>
 						<a href="cardapio.html">
-							<span class="icone sobre"></span>
+							<span class="icone cardapio"></span>
 							Cardápio
 						</a>
 					</li>
@@ -429,6 +429,9 @@
 					</li>
 					<li>
 						<a href="sobre.html">Sobre nós</a>
+					</li>
+					<li>
+						<a href="cardapio.html">Cardápio</a>
 					</li>
 					<li>
 						<a href="localizacao.html">Localização</a>
