--- a/ouro.html
+++ b/ouro.html
@@ -56,6 +56,12 @@
 						</a>
 					</li>
 					<li>
+						<a href="cardapio.html">
+							<span class="icone cardapio"></span>
+							Cardápio
+						</a>
+					</li>
+					<li>
 						<a href="localizacao.html">
 							<span class="icone localizacao"></span>
 							Localização
@@ -96,12 +102,11 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li>TV LED 32"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som</li>
+									<li>&#10003; TV LED 32"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som</li>
 								</ul>
 							</div>
 						</section>
@@ -129,12 +134,11 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li>TV LED 32"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som</li>
+									<li>&#10003; TV LED 32"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som</li>
 								</ul>
 							</div>
 						</section>
@@ -220,6 +224,9 @@
 					</li>
 					<li>
 						<a href="sobre.html">Sobre nós</a>
+					</li>
+					<li>
+						<a href="cardapio.html">Cardápio</a>
 					</li>
 					<li>
 						<a href="localizacao.html">Localização</a>
