--- a/perola.html
+++ b/perola.html
@@ -56,6 +56,12 @@
 						</a>
 					</li>
 					<li>
+						<a href="cardapio.html">
+							<span class="icone cardapio"></span>
+							Cardápio
+						</a>
+					</li>
+					<li>
 						<a href="localizacao.html">
 							<span class="icone localizacao"></span>
 							Localização
@@ -100,13 +106,12 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Toca disco</strong></li>
-									<li>TV LED 32"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Toca disco</li>
+									<li>&#10003; TV LED 32"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -135,16 +140,15 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Cama massageadora</strong></li>
-									<li><strong>Toca disco</strong></li>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Espelho no teto</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Cama massageadora</li>
+									<li>&#10003; Toca disco</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Espelho no teto</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -172,15 +176,14 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Cama no formato de carro</strong></li>
-									<li>Smart TV 40"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Espelho no teto</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Cama no formato de carro</li>
+									<li>&#10003; Smart TV 40"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Espelho no teto</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -266,6 +269,9 @@
 					</li>
 					<li>
 						<a href="sobre.html">Sobre nós</a>
+					</li>
+					<li>
+						<a href="cardapio.html">Cardápio</a>
 					</li>
 					<li>
 						<a href="localizacao.html">Localização</a>
