--- a/prata.html
+++ b/prata.html
@@ -56,6 +56,12 @@
 						</a>
 					</li>
 					<li>
+						<a href="cardapio.html">
+							<span class="icone cardapio"></span>
+							Cardápio
+						</a>
+					</li>
+					<li>
 						<a href="localizacao.html">
 							<span class="icone localizacao"></span>
 							Localização
@@ -103,11 +109,10 @@
 								<p class="preco">R$ 110,00</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li>TV LED 22"</li>
-									<li>Frigobar</li>
-									<li>Ventilador de teto</li>
+									<li>&#10003; TV LED 22"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ventilador de teto</li>
 								</ul>
 							</div>
 						</section>
@@ -193,6 +198,9 @@
 					</li>
 					<li>
 						<a href="sobre.html">Sobre nós</a>
+					</li>
+					<li>
+						<a href="cardapio.html">Cardápio</a>
 					</li>
 					<li>
 						<a href="localizacao.html">Localização</a>
