--- a/rubi-duplex.html
+++ b/rubi-duplex.html
@@ -56,6 +56,12 @@
 						</a>
 					</li>
 					<li>
+						<a href="cardapio.html">
+							<span class="icone cardapio"></span>
+							Cardápio
+						</a>
+					</li>
+					<li>
 						<a href="localizacao.html">
 							<span class="icone localizacao"></span>
 							Localização
@@ -100,16 +106,15 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Com cobertura</strong></li>
-									<li><strong>Hidro</strong></li>
-									<li><strong>Churrasqueira</strong></li>
-									<li>Smart TV 48"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Com cobertura</li>
+									<li>&#10003; Hidro</li>
+									<li>&#10003; Churrasqueira</li>
+									<li>&#10003; Smart TV 48"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -140,16 +145,15 @@
 								<p class="obs">* O período de 12 horas não é válido em vésperas de feriados e no Dia dos Namorados</p>
 							</div>
 							<div class="blocos descricao">
-								<h3><span class="descricao"></span>Essa suíte tem:</h3>
 								<ul>
-									<li><strong>Com cobertura</strong></li>
-									<li><strong>Hidro</strong></li>
-									<li><strong>Churrasqueira</strong></li>
-									<li>Smart TV 48"</li>
-									<li>Frigobar</li>
-									<li>Ar condicionado</li>
-									<li>Som USB</li>
-									<li>Secador de cabelo</li>
+									<li>&#10003; Com cobertura</li>
+									<li>&#10003; Hidro</li>
+									<li>&#10003; Churrasqueira</li>
+									<li>&#10003; Smart TV 48"</li>
+									<li>&#10003; Frigobar</li>
+									<li>&#10003; Ar condicionado</li>
+									<li>&#10003; Som USB</li>
+									<li>&#10003; Secador de cabelo</li>
 								</ul>
 							</div>
 						</section>
@@ -235,6 +239,9 @@
 					</li>
 					<li>
 						<a href="sobre.html">Sobre nós</a>
+					</li>
+					<li>
+						<a href="cardapio.html">Cardápio</a>
 					</li>
 					<li>
 						<a href="localizacao.html">Localização</a>
