--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="author" content="Denis Toledo">
     <meta name="description" content="">
     <title></title>
-    <link rel="stylesheet" href="develop/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
   </head>
   <body>
+    <img src="assets/svg/denis-toledo-alternative.svg" alt="">
     <span></span>
     <h1>Hello, dnstld =]</h1>
 
     <script src="node_modules/less/dist/less.min.js"></script>
-    <script src="develop/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
