--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="">
     <title></title>
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <img src="assets/svg/denis-toledo-alternative.svg" alt="">
     <span></span>
     <h1>Hello, dnstld =]</h1>
 
